[package]
name = "zqlu"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "zqlu is a convenient text-based format for public keys"
homepage = "https://zq.lu"

[features]
default = []
cli = ["dep:anyhow", "dep:clap"]

[[bin]]
name = "zqlu"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
ssh-key = { version = "0.6"}
codeckit = "0.1"
clap = { version = "4.6", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
thiserror = "2.0"
crc = "3.4"
num_enum = "0.7"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
primeorder = "0.13"
bytes = "1.11"

[dev-dependencies]
anyhow = "1.0"
